# sdk

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  objects.inv  sitemap.xml
.github/scripts/: setup-config.py
.github/workflows/: ci-python.yml  deploy-docs.yml
access_data_bq/: index.html
access_data_packages/: index.html
api_reference_python/: index.html
api_reference_r/: index.html
api_reference_stata/: index.html
colab_checks/: index.html
colab_data/: index.html
colab_infrastructure/: index.html
docs/: mkdocs.yml
docs/docs/assets/css/: custom.css
docs/docs/en/: access_data_packages.md  api_reference_r.md  colab_checks.md  colab_data.md  colab_infrastructure.md  style_data.md
docs/docs/es/: access_data_packages.md  api_reference_r.md  colab_checks.md  colab_data.md  colab_infrastructure.md  style_data.md
docs/docs/pt/: access_data_bq.md  access_data_packages.md  api_reference_r.md  colab_checks.md  colab_data.md  colab_infrastructure.md  index.md  style_data.md
en/: index.html
en/access_data_bq/: index.html
en/access_data_packages/: index.html
en/api_reference_python/: index.html
en/api_reference_r/: index.html
en/api_reference_stata/: index.html
en/colab_checks/: index.html
en/colab_data/: index.html
en/colab_infrastructure/: index.html
en/style_data/: index.html
en/tutorial_join_tables/: index.html
es/: index.html
es/access_data_bq/: index.html
es/access_data_packages/: index.html
es/api_reference_python/: index.html
es/api_reference_r/: index.html
es/api_reference_stata/: index.html
es/colab_checks/: index.html
es/colab_data/: index.html
es/colab_infrastructure/: index.html
es/style_data/: index.html
es/tutorial_join_tables/: index.html
pt/: index.html
pt/access_data_bq/: index.html
pt/access_data_packages/: index.html
pt/api_reference_python/: index.html
pt/api_reference_r/: index.html
pt/colab_checks/: index.html
pt/colab_data/: index.html
pt/colab_infrastructure/: index.html
pt/style_data/: index.html
python-package/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
python-package/basedosdados/: __init__.py  backend.py
python-package/basedosdados/core/: base.py
python-package/basedosdados/download/: download.py  metadata.py
python-package/basedosdados/upload/: connection.py  dataset.py  datatypes.py  storage.py  table.py  utils.py
python-package/scripts/: gendoc.py
python-package/tests/: config.py  constants.py  test_backend.py  test_dataset.py  test_datatype.py  test_download.py  test_storage.py  test_table.py  test_utils.py
python-package/tests/outdated/: conftest.py
python-package/tests/sample_data/table/: municipio.csv  publish.sql  publish_part.sql
python-package/tests/test_download/: test_download.py  test_metadata.py
python-package/tests/test_order1/: test_dataset.py
python-package/tests/test_order2/: test_table.py
python-package/tests/test_order3/: test_storage.py
python-package/tests/test_upload/: test_dataset.py  test_datatype.py  test_storage.py  test_table.py  test_utils.py
r-package/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE
r-package/R/: http-client.R  metadata.R  utils-typed.R  zzzz.R
r-package/tests/testthat/: test-bd_metadata.R
search/: search_index.json
stata-package/: Minitutorial.md  README.md  basedosdados.pkg  bd_download.sthlp  bd_get_table_columns.sthlp  bd_get_table_description.sthlp  bd_list_dataset_tables.sthlp  bd_list_datasets.sthlp  bd_read_sql.sthlp  bd_read_table.sthlp
style_data/: index.html
tutorial_join_tables/: index.html
