[project]
name = "basedosdados"
version = "2.0.2"
description = "Organizar e facilitar o acesso a dados brasileiros através de tabelas públicas no BigQuery."
authors = [
    { name = "Joao Carabetta", email = "joao.carabetta@gmail.com" },
    { name = "Ricardo Dahis" },
    { name = "Diego Oliveira" },
]
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.86",
    "google-cloud-bigquery>=3.10",
    "google-cloud-bigquery-connection>=1.12",
    "google-cloud-bigquery-storage>=2.19",
    "google-cloud-storage>=2.9",
    "gql>=3.4",
    "loguru>=0.7.0",
    "pandas>=2.0",
    "pandas-gbq>=0.19",
    "pandavro>=1.7",
    "pydata-google-auth>=1.8",
    "requests-toolbelt>=1",
    "tomlkit>=0.11",
    "tqdm>=4",
]

[dependency-groups]
dev = ["pre-commit>=3.3.3", "ruff>=0.8.5", "semgrep>=1.36.0", "taskipy>=1.12.0"]
docs = [
    "mkdocs>=1.2.3",
    "mkdocs-click>=0.5.0",
    "mkdocs-material>=9.6.0",
    "mkdocs-static-i18n>=0.56",
    "mkdocstrings[python]>=0.18"
]
test = ["pytest>=7.2.1", "pytest-order>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["basedosdados"]

[tool.ruff]
line-length = 79
exclude = ["tests/outdated"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--ignore=tests/outdated", "-p no:warnings"]
