[project]
name = "basedosdados"
version = "2.0.2"
description = "Organize and facilitate access to Brazilian data through public tables on BigQuery."
authors = [
    { name = "Joao Carabetta", email = "joao.carabetta@gmail.com" },
    { name = "Ricardo Dahis" },
    { name = "Diego Oliveira" },
]
maintainers = [
    { name = "Pedro Castro", email = "pedro.castro@basedosdados.org" },
]
readme = "README.md"
keywords = ["basedosdados", "bigquery", "datalake"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.86",
    "google-cloud-bigquery>=3.10",
    "google-cloud-bigquery-connection>=1.12",
    "google-cloud-bigquery-storage>=2.19",
    "google-cloud-storage>=2.9",
    "gql>=3.4",
    "loguru>=0.7.0",
    "pandas>=2.0",
    "pandas-gbq>=0.19",
    "pandavro>=1.7",
    "pydata-google-auth>=1.8",
    "requests-toolbelt>=1",
    "tomlkit>=0.11",
    "tqdm>=4",
]

[dependency-groups]
dev = [
    "pre-commit>=3.3.3",
    "ruff>=0.8.5",
    "docstring-to-markdown>=0.17",
    "pydoc-markdown>=4.8.2",
    "pytest>=7.2.1",
    "pytest-order>=1.3.0",
]

[project.optional-dependencies]
all = ["gql", "pandavro", "requests-toolbelt"]
avro = ["pandavro"]
upload = ["gql", "requests-toolbelt"]

[project.urls]
repository = "https://github.com/basedosdados/sdk"
documentation = "https://basedosdados.org/docs/api_reference_python"
issues = "https://github.com/basedosdados/sdk/issues"
source = "https://github.com/basedosdados/sdk/tree/master/python-package"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["basedosdados"]

[tool.ruff]
line-length = 79
exclude = ["tests/outdated"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--ignore=tests/outdated", "-p no:warnings"]
